--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "prisma:init": "npx prisma generate",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
+    "test": "npm run test:up && jest",
+    "test:up": "docker-compose -f ./docker-compose-test.yml up -d",
+    "test:down": "docker-compose -f ./docker-compose-test.yml down",
+    "test:watch": "DATABASE_URL=mongodb://localhost:27099/test jest --watch",
+    "test:cov": "DATABASE_URL=mongodb://localhost:27099/test jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
@@ -25,6 +28,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^8.0.2",
     "@nestjs/platform-express": "^8.0.0",
+    "@prisma/client": "^2.27.0",
     "apollo-server-express": "2.25.2",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
@@ -50,6 +54,7 @@
     "eslint-plugin-import": "^2.23.4",
     "jest": "27.0.6",
     "prettier": "^2.3.2",
+    "prisma": "^2.27.0",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
